test/classes/delete-free/lifetimes/bad-append-borrow.good
bad-append-borrow.chpl:22: In function 'addone':
bad-append-borrow.chpl:27: error: Actual argument does not meet called function lifetime constraint
$CHPL_HOME/modules/standard/List.chpl:626: note: called function list(I,false).append(x: borrowed I)
$CHPL_HOME/modules/standard/List.chpl:626: note: includes lifetime constraint this < x
